# fp-2023-cub-fall

./: CHANGELOG.md  LICENSE copy  README.md  fp-2023-cub-fall.cabal  hw01.cabal  hw02.cabal  hw03.cabal  stack.yaml  tasks1.md
Task2_Practical+Programming/: FindMin.hs  RTDeque.hs
app/: Main.hs  Tree_2_1.hs  Tree_2_2_1.hs  Tree_2_2_2.hs
newtype/: CHANGELOG.md  newtype.cabal  package.yaml
newtype/src/: Lambda.hs  Lib.hs
regexp/: CHANGELOG.md  package.yaml  regexp.cabal
regexp/src/: Lib.hs  Regexp.hs
sparseMatrix/src/: QuadTree.hs
src/: BankersDeque.hs  Deque.hs  Dijkstra.hs  Queue.hs  QueueBankers.hs  QueuePhysicist.hs  QueuePureFunctional.hs  QueueRealTime.hs  SBH_Bootstrapped.hs  SkewBinomialHeap.hs  Tree_2_1.hs  Tree_2_2_1.hs  Tree_2_2_2.hs
stlc/: package.yaml  stlc.cabal
stlc/app/: App.hs
stlc/src/: Parser.hs  Syntax.hs  TypeCheck.hs
tasks_01/: 2_1.hs  2_2_1.hs  2_2_2.hs  queue_banker.hs  queue_physicist.hs  queue_pure_functional.hs  queue_real_time.hs  rbt.cpp
test/: BankersDequeProp.hs  BankersDequeTests.hs  QueueBankersProp.hs  QueueBankersTests.hs  QueuePhysicistProp.hs  QueuePhysicistTests.hs  QueuePureFunctionalProp.hs  QueuePureFunctionalTests.hs  QueueRealTimeProp.hs  QueueRealTimeTests.hs  SBH_BootstrappedProp.hs  SBH_BootstrappedTests.hs  SkewBinomialHeapProp.hs  SkewBinomialHeapTests.hs  Test.hs
test/Test/: BankersDequeProp.hs  BankersDequeTests.hs  QueueBankersProp.hs  QueueBankersTests.hs  QueuePhysicistProp.hs  QueuePhysicistTests.hs  QueuePropTest.hs  (+14 more)
traversal/: CHANGELOG.md  README.md  package.yaml  traversal.cabal
(+5 files in other folders)
